...
    <string name="select_group">Select Group</string>
    <string name="users_icon">users_icon</string>
    <string name="select_users">Select User(s)</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="group_icon">group_icon</string>
    <string name="select_location">Select Location</string>
    <string name="log_out">Log out</string>
    <string name="overflow_menu">overflow menu</string>
    <string name="schedule">schedule</string>
    <string name="user">user</string>
    <string name="notification">notification</string>
    <string name="big_owl">Big Owl</string>
    <string name="search_user">Search User</string>
...
    <string name="wiki_page_manual_uri">"https://github.com/Landry333/Big-Owl/wiki/Manual"</string>
    <string name="notification_time">Time</string>
    <string name="notification_page">Notifications</string>
    <string name="notification_content">Content</string>
    <string name="notification_name">Name</string>
    <string name="your_attendance_result">Your attendance result:</string>
    <string name="propose_fingerprint_auth">
        Add fingerprint authentication to secure your account?\n\n
        NOTE: This will also make your account ONLY accessible by a device having sim
        card_1 number same as the phone number you saved in your account
    </string>
    <string name="no_compatibility_with_phone">
        Sorry, this additional security service is not available on
        this number or with your phone and telephony provider\n\n
        SERVICE IS NOT ALLOWED\n\n
        First make sure sim card_1 number on this phone is the same as in your account
    </string>
    <string name="is_fingerprint_auth_registered">
        You are registered to fingerprint authentication.\n\n
        You can modify your choice on Edit profile
    </string>
    <string name="not_allowed">
        You are not allowed to access this account\n\n
        Sim card_1 number on this phone should be the same as in your account
    </string>
    <string name="use_your_contacts_list">use your contacts list</string>
    <string name="edit_profile">Edit profile</string>
    <string name="enter_your_choice_yes_or_no">Enter your choice, YES or NO</string>
    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="authentication_message">authentication_message</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="start_fingerprint_authentication">start fingerprint authentication</string>
    <string name="authentication_result_message">authentication_result_message</string>
    <string name="add">ADD</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="i_supervise">I supervise</string>
    <string name="supervising_me">supervising me</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_don_t_have_an_account">Forgot password? Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
...
    <string name="supervisor">Supervisor</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="search">Search…</string>
    <string name="description_bigowl_logo">BigOwl Logo</string>
    <string name="biometric_not_supported">Biometric Not Supported on this phone</string>
    <string name="not_allowed_error">NOT ALLOWED</string>
    <string name="failed_auth">Failed authentication</string>
    <string name="auth_result_error">Error</string>
    <string name="location">Location</string>
    <string name="send_request">Send request</string>
    <string name="cancel_request">Cancel request</string>
    <string name="cant_send">Can not send</string>
...
